--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,76 @@
         android:background="@color/btnColor"
         android:fontFamily="@font/lucida"
         android:layout_below="@id/myTextView1">
-
     </Button>
+    <Space
+        android:id="@+id/space1"
+        android:layout_width="match_parent"
+        android:layout_height="5pt"
+        android:layout_below="@id/convertButton"></Space>
+    <LinearLayout
+        android:id="@+id/child1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@id/space1">
+        <EditText
+            android:id="@+id/inputText"
+            android:layout_width="0dip"
+            android:layout_height="20pt"
+            android:layout_weight="0.2"
+            android:text="@string/inputText"
+            android:textColor="@color/textColor"
+            android:textSize="10pt"
+            android:textStyle="bold"
+            android:fontFamily="@font/cambria"
+            android:gravity="center"
+            android:background="@color/etBgColor"
+            android:inputType="number"
+            android:hint="@string/hint"></EditText>
+        <Spinner
+            android:id="@+id/oriList"
+            android:layout_width="0dip"
+            android:layout_height="20pt"
+            android:layout_weight="0.24"
+            android:entries="@array/tempList"
+            android:prompt="@string/inputPrompt"
+            android:spinnerMode="dialog"
+            android:gravity="center"></Spinner>
+        <TextView
+            android:id="@+id/myTextView2"
+            android:layout_width="0dip"
+            android:layout_height="20pt"
+            android:layout_weight="0.12"
+            android:text="@string/tv2Text"
+            android:textColor="@color/textColor"
+            android:textSize="14pt"
+            android:textStyle="bold"
+            android:fontFamily="@font/cambria"
+            android:gravity="center"></TextView>
+        <EditText
+            android:id="@+id/outputText"
+            android:layout_width="0dip"
+            android:layout_height="20pt"
+            android:layout_weight="0.2"
+            android:text="@string/inputText"
+            android:textColor="@color/textColor"
+            android:textSize="10pt"
+            android:textStyle="bold"
+            android:fontFamily="@font/cambria"
+            android:gravity="center"
+            android:background="@color/etBgColor"
+            android:inputType="number"
+            android:hint="@string/hint"
+            android:enabled="false"></EditText>
+        <Spinner
+            android:id="@+id/convList"
+            android:layout_width="0dip"
+            android:layout_height="20pt"
+            android:layout_weight="0.24"
+            android:entries="@array/tempList"
+            android:prompt="@string/inputPrompt"
+            android:spinnerMode="dialog"
+            android:gravity="center"></Spinner>
+    </LinearLayout>
 
 </RelativeLayout>
